--- a/MoneyBankV1/MoneyBankV1.csproj
+++ b/MoneyBankV1/MoneyBankV1.csproj
@@ -80,6 +80,12 @@
     <Compile Include="ucManagement.Designer.cs">
       <DependentUpon>ucManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="ucReminder.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ucReminder.Designer.cs">
+      <DependentUpon>ucReminder.cs</DependentUpon>
+    </Compile>
     <Compile Include="ucReports.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -106,6 +112,9 @@
     </Compile>
     <EmbeddedResource Include="ucManagement.resx">
       <DependentUpon>ucManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucReminder.resx">
+      <DependentUpon>ucReminder.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ucReports.resx">
       <DependentUpon>ucReports.cs</DependentUpon>
