--- a/MoneyBankV1/MoneyBankV1.csproj
+++ b/MoneyBankV1/MoneyBankV1.csproj
@@ -72,8 +72,20 @@
     <Compile Include="Dashboard.Designer.cs">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ucMainMenu.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ucMainMenu.Designer.cs">
+      <DependentUpon>ucMainMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="ucManagement.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -101,6 +113,9 @@
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -110,6 +125,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ucMainMenu.resx">
+      <DependentUpon>ucMainMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ucManagement.resx">
       <DependentUpon>ucManagement.cs</DependentUpon>
     </EmbeddedResource>
