--- a/MoneyBank.EntityData/MoneyBank.EntityData.csproj
+++ b/MoneyBank.EntityData/MoneyBank.EntityData.csproj
@@ -40,12 +40,10 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\..\GLOBAL DLL\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="MySql.Data">
       <HintPath>..\..\GLOBAL DLL\MySql.Data.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="MySql.Data.Entity.EF6">
       <HintPath>..\..\GLOBAL DLL\MySql.Data.Entity.EF6.dll</HintPath>
     </Reference>
     <Reference Include="System" />
