--- a/MoneyBankV1/MoneyBankV1.csproj
+++ b/MoneyBankV1/MoneyBankV1.csproj
@@ -147,6 +147,7 @@
     <EmbeddedResource Include="ucTransactionList.resx">
       <DependentUpon>ucTransactionList.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="GLOBAL DLL\CrystalReport\CR13SP34MSI64_0-80007712.MSI" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -195,6 +196,21 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="GLOBAL DLL\AutoMapper.dll" />
+    <Content Include="GLOBAL DLL\CrystalDecisions.CrystalReports.Engine.dll" />
+    <Content Include="GLOBAL DLL\CrystalDecisions.ReportSource.dll" />
+    <Content Include="GLOBAL DLL\CrystalDecisions.Shared.dll" />
+    <Content Include="GLOBAL DLL\CrystalDecisions.Windows.Forms.dll" />
+    <Content Include="GLOBAL DLL\CrystalReport\CRforVS6413SP34_0-80007712.EXE" />
+    <Content Include="GLOBAL DLL\EntityFramework.dll" />
+    <Content Include="GLOBAL DLL\EntityFramework.SqlServer.dll" />
+    <Content Include="GLOBAL DLL\EPPlus.dll" />
+    <Content Include="GLOBAL DLL\EPPlus.Interfaces.dll" />
+    <Content Include="GLOBAL DLL\EPPlus.System.Drawing.dll" />
+    <Content Include="GLOBAL DLL\Microsoft.Office.Interop.Word.dll" />
+    <Content Include="GLOBAL DLL\MySql.Data.dll" />
+    <Content Include="GLOBAL DLL\MySql.Data.Entity.EF6.dll" />
+    <Content Include="GLOBAL DLL\System.ComponentModel.Annotations.dll" />
     <Content Include="MoneyBankLogo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
