--- a/MoneyBankV1/MoneyBankV1.csproj
+++ b/MoneyBankV1/MoneyBankV1.csproj
@@ -64,6 +64,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SystemVersion.cs">
+      <Link>SystemVersion.cs</Link>
+    </Compile>
     <Compile Include="Dashboard.cs">
       <SubType>Form</SubType>
     </Compile>
