--- a/MoneyBank.DTO/MoneyBank.DTO.csproj
+++ b/MoneyBank.DTO/MoneyBank.DTO.csproj
@@ -56,6 +56,7 @@
     <Compile Include="UserDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInformationDTO.cs" />
+    <Compile Include="VersionDTO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\FerPROJ.Design\FerPROJ.Design\FerPROJ.Design.csproj">
