--- a/MoneyBank.EntityData/MoneyBank.EntityData.csproj
+++ b/MoneyBank.EntityData/MoneyBank.EntityData.csproj
@@ -66,6 +66,7 @@
     <Compile Include="TransactionData.cs" />
     <Compile Include="UserData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VersionData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\FerPROJ.DBHelper\FerPROJ.DBHelper\FerPROJ.DBHelper.csproj">
