--- a/MoneyBank.Forms/MoneyBank.Forms.csproj
+++ b/MoneyBank.Forms/MoneyBank.Forms.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SystemVersion.cs">
+      <Link>SystemVersion.cs</Link>
+    </Compile>
     <Compile Include="FormLayer.cs" />
     <Compile Include="FrmBanks.cs">
       <SubType>Form</SubType>
@@ -179,6 +182,12 @@
     <Compile Include="ManageUserInfo.Designer.cs">
       <DependentUpon>ManageUserInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="ManageVersion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManageVersion.Designer.cs">
+      <DependentUpon>ManageVersion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs" />
   </ItemGroup>
@@ -273,6 +282,9 @@
     <EmbeddedResource Include="ManageUserInfo.resx">
       <DependentUpon>ManageUserInfo.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ManageVersion.resx">
+      <DependentUpon>ManageVersion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx" />
   </ItemGroup>
   <ItemGroup>
@@ -288,6 +300,7 @@
     <None Include="Properties\DataSources\MoneyBank.DTO.UserBankDTO.datasource" />
     <None Include="Properties\DataSources\MoneyBank.DTO.UserDTO.datasource" />
     <None Include="Properties\DataSources\MoneyBank.DTO.UserInformationDTO.datasource" />
+    <None Include="Properties\DataSources\MoneyBank.DTO.VersionDTO.datasource" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
