--- a/MoneyBank.Entity/MoneyBank.Entity.csproj
+++ b/MoneyBank.Entity/MoneyBank.Entity.csproj
@@ -32,16 +32,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
-      <HintPath>..\..\GLOBAL DLL\EntityFramework.dll</HintPath>
+      <HintPath>..\..\MyDLL\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\..\GLOBAL DLL\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\..\MyDLL\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data">
-      <HintPath>..\..\GLOBAL DLL\MySql.Data.dll</HintPath>
+      <HintPath>..\..\MyDLL\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data.Entity.EF6">
-      <HintPath>..\..\GLOBAL DLL\MySql.Data.Entity.EF6.dll</HintPath>
+      <HintPath>..\..\MyDLL\MySql.Data.Entity.EF6.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
